Fix mobile horizontal scroll

--- a/builds/css/style.css
+++ b/builds/css/style.css
@@ -15,6 +15,10 @@ html {
 	overflow-x:auto;
 }
 
+table {
+	overflow-x:auto;
+}
+
 .span-spacing {
 	margin-left:1em;
 	font-size:1.25em;
